# pf_orchard_localization

./: .gitignore  README.md  pyproject.toml  setup.py
.devcontainer/desktop/: devcontainer.json
.devcontainer/jetson/: Dockerfile  build_image.txt  devcontainer.json  setup_container.sh
.devcontainer/ubuntu-desktop/: Dockerfile  build_command.txt  devcontainer.json
config/: parameters_image_select.yaml  parameters_pf.yaml  parameters_pf_app_bags.yaml  parameters_pf_app_bags_jetson.yaml  parameters_pf_app_cached.yaml  parameters_pf_app_cached_jetson.yaml  parameters_pf_app_live.yaml
docker/: Dockerfile.desktop-contained  Dockerfile.desktop-ros  Dockerfile.jetson  docker-compose-desktop-contained-pf-app.yml  docker-compose-desktop-ros-pf-app.yml  docker-compose-jetson-odom.yml  docker-compose-jetson-pf-app.yml  ros_entrypoint_desktop.sh  ros_entrypoint_jetson.sh
scripts/: env_vars.txt  list_modules.py  run_evaluation.py  run_image_select.py  run_pf_app.py  run_pf_bag_app.py  trial1.py  trials1.py  trials2.py
scripts/jetson_trials/: basic_pyqt.py  pyqt_producer.py  pyqt_producer2.py
src/pf_orchard_localization/app_manager/: __init__.py  app_manager.py
src/pf_orchard_localization/app_managers/: __init__.py  pf_app.py  pf_app_bags.py
src/pf_orchard_localization/app_modes/: __init__.py  pf_live_mode.py  pf_mode.py  playback_mode.py
src/pf_orchard_localization/app_window_constructors/: __init__.py  image_select_window_constructor.py
src/pf_orchard_localization/custom_widgets/: __init__.py  data_file_controls.py  misc_small_widgets.py  pf_plotter.py  (+3 more)
(+23 files in other folders)
