[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pf_orchard_localization"
version = "0.1.0"
description = "A short description of your project"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]